test/arrays/diten/unboundedArrayNoInit.good
unboundedArrayNoInit.chpl:1: error: Arrays declared over unbounded domains must be explicitly initialized
