test/arrays/diten/unboundedArrayNoInit.chpl
var A: [1..] int;
